Fixed email.valid validation message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 # Email
 email.notempty=Please enter a valid email address.
-email.invalid=Please enter a valid email address.
+email.valid=Please enter a valid email address.
 email.unique=The entered email address is already registered.
 
 # Password
